# osunbitdb

./: Cargo.toml  README.md
src/: client.rs  errors.rs  ops.rs  transaction.rs
tests/: batch_test.rs  raw_test.rs  scan_test.rs  transaction_test.rs
