[package]
name = "osunbitdb"
version = "0.7.0"
edition = "2021"
authors = ["focusboon"]
description = "A lightweight super fast transaction async db"
license = "MIT OR Apache-2.0"
repository = "https://github.com/focusboon/osunbitdb"
keywords = ["osunbit", "database", "async","tikv", "document"]
categories = ["database"]
readme = "README.md"

[dependencies]
tikv-rust = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1.30", features = ["full"] }
thiserror = "1.0"
